# rinha-backend-2024-q1

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  integration-env.yml
.github/workflows/: check-and-lint.yaml  publish.yaml  test.yaml
configuration/: local.yaml  production.yaml
rinha/: docker-compose.yml  env-setup.sh  nginx.conf
src/: configuration.rs  lib.rs  main.rs  routes.rs  startup.rs  structs.rs  telemetry.rs
src/routes/: count_devs.rs  customers.rs  devs.rs  health_check.rs  transaction.rs
src/structs/: api.rs  customer.rs  person.rs  transaction.rs
tests/api/: count_devs.rs  get_dev_by_id.rs  get_devs_by_search_term.rs  get_statement.rs  health_check.rs  helpers.rs  main.rs  post_customer.rs  post_devs.rs  post_transaction.rs
