[package]
name = "rinha-backend-2023-q3"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rest-api-server"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.2"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt", "json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
mongodb = { version = "2.7", features = ["bson-uuid-1"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
futures = "0.3.29"
hyper = "1.1.0"
config = { version = "0.13.4", features = [] }
tower-http = { version = "0.5.0", features = ["sensitive-headers", "trace", "util", "request-id"] }
tower = "0.4.13"

[dev-dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.108"
ulid = "1.0.0"
