[package]
name = "rinha-backend-2023-q3"
version = "1.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rest-api-server"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt", "json"] }
serde = { version = "1.0", features = ["derive"] }
mongodb = { version = "2.8", features = ["bson-uuid-1"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
config = { version = "0.13.4", features = [] }
tower-http = { version = "0.5.2", features = ["sensitive-headers", "trace", "util", "request-id"] }
tower = "0.4.13"
validator = { version = "0.16.1", features = ["derive"] }
axum-valid = { version = "0.17.0", features = ["422", "into_json"] }
time = { version = "0.3.34", features = ["serde", "formatting"] }

[dev-dependencies]
reqwest = { version = "0.12.2", features = ["json"] }
serde_json = "1.0.115"
assert-json-diff = "2.0.2"
ulid = "1.1.0"
